# student-success-predictor

./: .gitignore  CLAUDE.md  ERRORS_AND_LEARNINGS.md  PROGRESS.md  README.md  Untitled.ipynb  _step_b.py  pyproject.toml
.claude/docs/: ADR_001_binary_classification.md  DATA_INSIGHTS.md
artifacts/: best_model.pkl  metrics_comparison.csv
data/: data_dictionary.md
data/processed/: X_test.parquet  X_train.parquet  enrolled_demo.parquet  y_test.parquet  y_train.parquet
docs/: ADR_001_binary_classification.md
notebooks/: 01_preprocessing.ipynb  02_ml_and_llm.ipynb
src/data/: loader.py  preprocessor.py
src/llm/: explainer.py
src/models/: base_model.py  classifiers.py  evaluator.py  trainer.py
tests/: test_evaluator.py  test_loader.py  test_models.py  test_preprocessor.py  test_trainer.py
