[project]
name = "student-success-predictor"
version = "0.1.0"
description = "ML + LLM system to predict university student outcomes"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn",
    "xgboost",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "plotly",
    "shap",
    "optuna",
    "anthropic",
    "python-dotenv",
    "ucimlrepo",
    "ipykernel",
    "jupyter",
    "kaleido",
    "pyarrow>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
